# ckad-practice

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  ERRORS.md  FLOWS.md  GATES.md  PRD.md  PROJECT_FRAME.md  README.md  STATUS.md  check.sh  pyproject.toml
kind/: cluster-config.yaml  reset.sh  setup.sh
questions/01-design-build/: q01_docker_build.yaml  q02_named_container.yaml  q03_pv_pvc.yaml  q04_job.yaml  q05_cronjob.yaml  q06_bmu_container_build.yaml  q07_bmu_pod.yaml  q08_bmu_parallel_job.yaml  q09_bmu_cronjob.yaml  q10_bmu_ephemeral_volume.yaml  q11_bmu_pv_static.yaml  q12_bmu_init_container.yaml  q13_bmu_adapter_pattern.yaml  q14_bmu_ambassador_pattern.yaml  q15_bmu_labels_annotations.yaml
questions/02-env-config/: q01_configmap.yaml  q02_secret.yaml  q03_crd.yaml  q04_quota_limitrange.yaml  q05_secret_env.yaml  q06_serviceaccount.yaml  q07_rbac.yaml  q08_bmu_kustomize.yaml  q09_bmu_crd.yaml  q10_bmu_rbac_sa.yaml  q11_bmu_resource_limits.yaml  q12_bmu_resourcequota.yaml  q13_bmu_limitrange.yaml  q14_bmu_configmap_volume.yaml  q15_bmu_secret_env.yaml  q16_bmu_securitycontext.yaml
questions/03-deployment/: q01_deployment.yaml  q02_expose_service.yaml  q03_rolling_update.yaml  q04_helm.yaml  q05_canary.yaml  q06_bmu_rolling_update.yaml  q07_bmu_hpa.yaml  q08_bmu_blue_green.yaml  q09_bmu_helm_consume.yaml  q10_bmu_helm_build.yaml
questions/04-services/: q01_nodeport.yaml  q02_networkpolicy.yaml  q03_clusterip.yaml  q04_ingress.yaml  q05_bmu_service.yaml  q06_bmu_troubleshoot_svc.yaml  (+2 more)
src/: environment.py  loader.py  main.py  schema.py  scorer.py  ui.py  verifier.py
(+16 files in other folders)
